--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-//spring.jpa.hibernate.ddl-auto=update
-//spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-//spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
-//spring.datasource.username=chan
-//spring.datasource.password=chan
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
+#spring.datasource.username=chan
+#spring.datasource.password=chan
 tokenSecret = fhwe9rhw938
 server.servlet.context-path=/mobile-app-ws
-//spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:postgresql://ec2-34-207-12-160.compute-1.amazonaws.com/debavabbnqj9gr
 spring.datasource.username=hcewbdfnwijfsp
