--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.datasource.username=chan
 #spring.datasource.password=chan
 tokenSecret = fhwe9rhw938
-server.servlet.context-path=/mobile-app-ws
+#server.servlet.context-path=/mobile-app-ws
 #spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:postgresql://ec2-34-207-12-160.compute-1.amazonaws.com/d4vsv00thgbdf2
